test/basic/good/core042.lat
int main() {
	int x;
	{
		boolean x;
	}
	return 0;
}
