test/basic/bad/core002.lat
string main(){
	return 0;
}
